Create mining trasaction
