# src/mine-to-exchange/mine-to-exchange.controller.ts
@@ -5,7 +5,10 @@ import { MineToExchangeService } from './mine-to-exchange.service';
 import {
   MineToExchangeConfigDTO,
   MineToExchangeConfigRespDTO,
+  CreateMiningTransactionsDTO,
 } from './mine-to-exchange.dto';
+import { M2MAuthGuard } from '../m2m-auth/m2m-auth.guard';
+import { SuccessDTO } from '../dto/success.dto';
 
 @ApiTags('mine-to-exchange')
 @Controller('mine-to-exchange')
@@ -13,9 +16,19 @@ export class MineToExchangeController {
   constructor(private readonly service: MineToExchangeService) {}
 
   @Post('config')
-  async config(
+  config(
     @Body() dto: MineToExchangeConfigDTO,
   ): Promise<MineToExchangeConfigRespDTO> {
     return this.service.getConfig(dto.toAddress);
+  }
+
+  @Post('transactions')
+  @M2MAuthGuard({
+    description: 'Create mining transactions',
+  })
+  createMiningTransactions(
+    @Body() dto: CreateMiningTransactionsDTO,
+  ): Promise<SuccessDTO> {
+    return this.service.createMiningTransactions(dto.transactions);
   }
 }
